// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientAppInstallConfirmation InstallForGroupHeading should match a snapshot where is not orgAdmin is offGrouping and foundations admin 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class=""
    style=""
  >
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p>
        You are about to install ‘
        App Name
        ’ for your Office Group 
        Cool Office Group
      </p>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p>
      You are about to install ‘
      App Name
      ’ for your Office Group 
      Cool Office Group
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ClientAppInstallConfirmation InstallForGroupHeading should match a snapshot where is not orgAdmin not offGrouping and foundations admin 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class=""
    style=""
  >
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p>
        You are about to install ‘
        App Name
        ’ for 
        <b>
          all
        </b>
         Users and Offices within your Organisation.
      </p>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p>
      You are about to install ‘
      App Name
      ’ for 
      <b>
        all
      </b>
       Users and Offices within your Organisation.
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ClientAppInstallConfirmation InstallForGroupHeading should match a snapshot where is orgAdmin and offGrouping 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class=""
    style=""
  >
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p>
        As an organisation admin, you have control over installation of ‘
        App Name
        ’ for either your Office Group or for
         
        <b>
          all
        </b>
         Users and Offices within your Organisation. To do this, you need to visit the
         
        <a>
          Reapit Connect Management App.
        </a>
      </p>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p>
      As an organisation admin, you have control over installation of ‘
      App Name
      ’ for either your Office Group or for
       
      <b>
        all
      </b>
       Users and Offices within your Organisation. To do this, you need to visit the
       
      <a>
        Reapit Connect Management App.
      </a>
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ClientAppInstallConfirmation should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="ant-scrolling-effect"
    style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
  >
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
    </div>
    <div>
      <div
        class="rc-dialog-root"
      >
        <div
          class="rc-dialog-mask"
        />
        <div
          aria-labelledby="test-id"
          class="rc-dialog-wrap m140lwlu-modal-centered"
          tabindex="-1"
        >
          <div
            aria-modal="true"
            class="rc-dialog m36ncwu-modal-container"
            role="dialog"
          >
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
            <div
              class="rc-dialog-content"
            >
              <button
                aria-label="Close"
                class="rc-dialog-close"
                type="button"
              >
                <span
                  aria-label="close"
                  class="delete"
                />
              </button>
              <div
                class="rc-dialog-header"
              >
                <div
                  class="rc-dialog-title"
                  id="test-id"
                >
                  <h4
                    class="modal-card-title is-4 pt-2 pb-2"
                  >
                    Confirm Peter's Properties installation
                  </h4>
                </div>
              </div>
              <div
                class="rc-dialog-body"
              >
                <div
                  class="content"
                  data-test=""
                >
                  <p>
                    You are about to install ‘
                    Peter's Properties
                    ’ for 
                    <b>
                      all
                    </b>
                     Users and Offices within your Organisation.
                  </p>
                  <h5
                    class="title is-5 mb-2"
                    id=""
                  >
                    Pricing Information
                  </h5>
                  <p>
                    There may be a cost associated to using this App/Integration. However, this information has not yet been provided by 
                    Pete's Proptech World Ltd
                    . Please contact 
                    Pete's Proptech World Ltd
                     directly for information about pricing.
                  </p>
                  <h5
                    class="title is-5 mb-2"
                    id=""
                  >
                    Data Permissions
                  </h5>
                  <p>
                    By installing this app, you are granting the following permissions to your data:
                  </p>
                  <p>
                    Information about your organisation and the names/email addresses of your users
                  </p>
                  <div
                    class="columns is-multiline"
                    data-test=""
                  >
                    <div
                      class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
                      data-test=""
                    >
                      Read data about developers
                    </div>
                    <div
                      class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
                      data-test=""
                    >
                      Write data about developers
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="rc-dialog-footer"
              >
                <div
                  class="is-centered buttons mx-auto"
                >
                  <button
                    class="button   is-secondary "
                    data-test="disagree-btn"
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    class="button   is-primary "
                    data-test="agree-btn"
                    type="button"
                  >
                    Confirm
                  </button>
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InstallDirectApiAppSucesfullyModal  should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="ant-scrolling-effect"
    style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
  >
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
    </div>
    <div>
      <div
        class="rc-dialog-root"
      >
        <div
          class="rc-dialog-mask"
        />
        <div
          aria-labelledby="test-id"
          class="rc-dialog-wrap m140lwlu-modal-centered mhi5uvy-modal-no-padding"
          tabindex="-1"
        >
          <div
            aria-modal="true"
            class="rc-dialog m36ncwu-modal-container m1pyzxrx-modal-no-header"
            role="dialog"
          >
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
            <div
              class="rc-dialog-content"
            >
              <button
                aria-label="Close"
                class="rc-dialog-close"
                type="button"
              >
                <span
                  aria-label="close"
                  class="delete"
                />
              </button>
              <div
                class="rc-dialog-header"
              >
                <div
                  class="rc-dialog-title"
                  id="test-id"
                >
                  <h4
                    class="modal-card-title is-4 pt-2 pb-2"
                  />
                </div>
              </div>
              <div
                class="rc-dialog-body"
              >
                <div
                  class=""
                  data-test="installations-success-message"
                >
                  <header
                    class="modal-card-head"
                  >
                    <h4
                      class="modal-card-title is-4"
                    >
                      Success
                    </h4>
                    <button
                      aria-label="close"
                      class="delete"
                      data-test="modal-close-button"
                      type="button"
                    />
                  </header>
                  <section
                    class="modal-card-body"
                  >
                    <p>
                      <p
                        class="mb-5"
                      >
                        Peter's Properties
                         has been successfully installed.
                      </p>
                      <p
                        class="mb-5 flex v-align-middle"
                      >
                        To launch, please use
                         
                        <a
                          class="t1nk0j00-truncate"
                          href="agencycloud://process/webpage?url=undefined"
                        />
                      </p>
                      <p>
                        If there are any additional setup requirements, a member of 
                        Pete's Proptech World Ltd
                         will be in touch to help you through the process.
                      </p>
                    </p>
                    <div
                      class="has-text-right"
                    >
                      <button
                        class="button   is-primary "
                        data-test="installations-success-button"
                        type="button"
                      >
                        Back to List
                      </button>
                    </div>
                  </section>
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InstallNonDirectApiAppSucesfullyModal  should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="ant-scrolling-effect"
    style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
  >
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
    </div>
    <div>
      <div
        class="rc-dialog-root"
      >
        <div
          class="rc-dialog-mask"
        />
        <div
          aria-labelledby="test-id"
          class="rc-dialog-wrap m140lwlu-modal-centered mhi5uvy-modal-no-padding"
          tabindex="-1"
        >
          <div
            aria-modal="true"
            class="rc-dialog m36ncwu-modal-container m1pyzxrx-modal-no-header"
            role="dialog"
          >
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
            <div
              class="rc-dialog-content"
            >
              <button
                aria-label="Close"
                class="rc-dialog-close"
                type="button"
              >
                <span
                  aria-label="close"
                  class="delete"
                />
              </button>
              <div
                class="rc-dialog-header"
              >
                <div
                  class="rc-dialog-title"
                  id="test-id"
                >
                  <h4
                    class="modal-card-title is-4 pt-2 pb-2"
                  />
                </div>
              </div>
              <div
                class="rc-dialog-body"
              >
                <div
                  class=""
                  data-test=""
                >
                  <header
                    class="modal-card-head"
                  >
                    <h4
                      class="modal-card-title is-4"
                    >
                      Success
                    </h4>
                    <button
                      aria-label="close"
                      class="delete"
                      data-test="modal-close-button"
                      type="button"
                    />
                  </header>
                  <section
                    class="modal-card-body"
                  >
                    <p>
                      <p
                        class="mb-4"
                      >
                        Peter's Properties
                         has been successfully installed
                      </p>
                    </p>
                    <div
                      class="has-text-right"
                    >
                      <div
                        class="is-centered buttons mx-auto"
                      >
                        <button
                          class="button   is-secondary "
                          data-test="installations-success-message"
                          type="button"
                        >
                          Back To List
                        </button>
                        <a
                          href="agencycloud://app?id=9b6fd5f7-2c15-483d-b925-01b650538e52&launchUri=undefined"
                        >
                          <button
                            class="button   is-primary "
                            data-test="installations-success-message-launch"
                            type="button"
                          >
                            Launch App
                          </button>
                        </a>
                      </div>
                    </div>
                  </section>
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
